--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run pytest
-        working-directory: server
-        run: pytest -q
+        run: pytest -q server/tests
 
   build:
     name: Build & Push Docker (GHCR)
