--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,30 +15,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Show repo tree
-        run: |
-          echo "== repo root =="
-          ls -la
-          echo "== server =="
-          ls -la server || true
-          echo "== server/tests =="
-          ls -la server/tests || true
-
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
       - name: Install deps
-        working-directory: server
         run: |
-          python -V
-          pip install -r requirements.txt
+          pip install -r server/requirements.txt
+          pip install pytest
 
       - name: Run pytest
-        working-directory: server
-        run: |
-          pytest -q tests
+        run: pytest -q server/tests
+
 
 
   build:
