--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
     concurrency:
       group: deploy-${{ github.ref_name }}
       cancel-in-progress: true
+    environment: env
     steps:
       - name: Trigger Render Deploy
         env:
