--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install deps
-        run: |
-          pip install -r server/requirements.txt
-          pip install pytest
+        run: pip install -r server/requirements.txt
 
       - name: Run pytest
         run: PYTHONPATH=$PWD pytest -q server/tests
